[package]
name = "jsxx"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_atoms = "^5.0.0"
swc_common = "^11.0.0"
swc_ecma_ast = "^11.0.0"
swc_ecma_compat_es2015 = "^16.0.0"
swc_ecma_minifier = "^20.0.0"
swc_ecma_transforms_base = "^15.0.0"
swc_ecma_utils = "^15.0.0"
swc_ecma_visit = "^11.0.0"
swc_bundler = "^19.0.0"
swc_ecma_loader = "^11.0.0"
swc_ecma_parser = "^14.0.0"
swc_ecma_codegen = "^13"

thiserror = "1.0.32"
anyhow = "1.0.43"

clap = { version = "3.2.16", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.43"
uuid = { version = "1.1.2", features = ["v4"] }
