[package]
name = "jsxx"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_atoms = "^5.0.0"
swc_common = "^12.0.0"
swc_ecma_ast = "^12.0.0"
swc_ecma_compat_es2015 = "^17.0.0"
swc_ecma_minifier = "^21.0.0"
swc_ecma_transforms_base = "^16.0.0"
swc_ecma_transforms_optimization = "^17.0.0"
swc_ecma_utils = "^16.0.0"
swc_ecma_visit = "^12.0.0"
swc_bundler = "^20.0.0"
swc_ecma_loader = "^12.0.0"
swc_ecma_parser = "^15.0.0"
swc_ecma_codegen = "^14"


thiserror = "1.0.32"
anyhow = "1.0.43"

clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
anyhow = "1.0.43"
uuid = { version = "1.1.2", features = ["v4"] }
