[package]
name = "jsxx"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_atoms = "^6.0.0"
swc_common = "^13.0.0"
swc_ecma_ast = "^13.0.0"
swc_ecma_compat_es2015 = "^19.0.0"
swc_ecma_minifier = "^23.0.0"
swc_ecma_transforms_base = "^18.0.0"
swc_ecma_transforms_optimization = "^19.0.0"
swc_ecma_utils = "^18.0.0"
swc_ecma_visit = "^13.0.0"
swc_bundler = "^22.0.0"
swc_ecma_loader = "^13.0.0"
swc_ecma_parser = "^17.0.0"
swc_ecma_codegen = "^15"
swc_ecma_quote = "^17"

thiserror = "1.0.32"
anyhow = "1.0.43"

clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
anyhow = "1.0.43"
uuid = { version = "1.1.2", features = ["v4"] }
